--- a/views/create.hbs
+++ b/views/create.hbs
@@ -1,6 +1,6 @@
 <!-- Content -->
 <div class="container" id="test">
-    <div class="col-lg-8">
+    <div class="col-lg-8 col-lg-offset-1">
 
         <div class="panel panel-default notthis">
             <div class="panel-heading">
