--- a/views/create.hbs
+++ b/views/create.hbs
@@ -130,10 +130,10 @@
                 <div class="form-group">
                 <select class="form-control" id="typeSelect">
                 <option hidden>Välj Typ</option>
-                <option>Flervalsfrågor</option>
-                <option>Alternativfrågor</option>
-                <option>Rangordningsfrågor</option>
-                <option>Öppna frågor</option>
+                <option id="qTypeMulti">Flervalsfrågor</option>
+                <option id="qTypeAlt">Alternativfrågor</option>
+                <option id="qTypeOrder">Rangordningsfrågor</option>
+                <option id="qTypeOpen">Öppna frågor</option>
                 </select>
                 </div>
 
