--- a/views/results.hbs
+++ b/views/results.hbs
@@ -10,10 +10,10 @@
 </div>
 
 <script>
-    //Array ska fyllas med rättade prov
+    //Array should be filled with scored tests
     var allTests = ["Djungelprov 0103-2017","Sportprov 0203-2017","Failprov 0105-2020"];
 
-    //Fyller upp sträng som laddas in på sidan
+    //Fills String to be loaded onto website
     var testInsert = "";
     for(var i=0; i < allTests.length; i++) {
         testInsert += "<option value=allTests[i]>"+allTests[i]+"</option>";
