--- a/views/share.hbs
+++ b/views/share.hbs
@@ -1,12 +1,12 @@
 <div class="container" id="shareTest">
     <div class="col-md-4 col-md-offset-4">
-        <!-- Choose test -->
+        <!-- Select test -->
         <h3 class="page-header">Välj test att dela</h3>
         <form action="share" method="post">
             <select name="share" id="shareTestSelect" class="form-control"></select>
             <br>
 
-            <!-- Choose group/student -->
+            <!-- Select group/student -->
             <select name="share" id="shareSelect" class="form-control">
                 <option value="">Dela till grupp/elev</option>
                 <option value="group" id="group">Dela till grupp</option>
@@ -16,7 +16,7 @@
     </div>
 </div>
 
-<!-- Choose group -->
+<!-- Select group -->
 <div class="container" id="shareGroupContainer">
     <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj grupp</h3>
@@ -28,7 +28,7 @@
     </div>
 </div>
 
-<!-- Choose student -->
+<!-- Select student -->
 <div class="container" id="shareStudentContainer">
     <div class="col-md-4 col-md-offset-4">
         <h3 class="page-header">Välj elev</h3>
