--- a/views/create.hbs
+++ b/views/create.hbs
@@ -44,6 +44,9 @@
         <div id="questionModal" class="modal fade" role="dialog">
 
         </div>
+        <div id="editModal" class="modal fade" role="dialog">
+
+        </div>
 
         <div id="questionBox">
             
@@ -103,12 +106,12 @@
                 <meta class="` + $('#typeSelect').val() + `">
 
                 <div class="pull-right">
-                    <button type="button" class="btn btn-default btn-sm">Redigera</button>
+                    <button type="button" class="btn btn-default btn-sm btn-edit" data-toggle="modal" data-target="#editModal">Redigera</button>
                     <button type="button" class="btn btn-default btn-sm btn-remove">
                         &nbsp;<span class="glyphicon glyphicon-remove"></span>&nbsp;
                     </button>
                 </div>
-                <h3 class="panel-title">`+ $("#question").find('input').val() +`</h3>
+                <h3 class="panel-title">`+ $("#question").find('input').val() +' ('+ $('#typeSelect').val() +')'+`</h3>
             </div>
             <div class="panel-body">
                 <ul class="list-group">`+ i +`</ul>
@@ -117,11 +120,72 @@
     });
 
     $('#test').on('click', '.panel-heading', function(e) {
-        $(this).next('.panel-body').slideToggle();
+        if(!$(event.target).hasClass('btn')){
+            $(this).next('.panel-body').slideToggle();
+        }
     });
 
-    $(document).on('click', '.panel', function() {
-        $(this).remove();
+    $(document).on('click', '.btn-remove', function() {
+        $(this).closest('.panel').remove();
+    });
+
+    $(document).on('click', '.btn-edit', function() {
+        $('#editModal').html(`
+
+                <div class="modal-dialog">
+
+
+                <div class="modal-content">
+                <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                <h4 class="modal-title">Fråga</h4>
+                </div>
+                <div class="modal-body">
+                <form>
+
+                <div class="form-group" id="question">
+                <input type="text" class="form-control questionTitle" placeholder="Fråga?" value="`+ $("#question").find('input').val() +`">
+                </div>
+
+
+                <div class="form-group">
+                <select class="form-control" id="typeSelect">
+                <option hidden>Välj Typ</option>
+                <option id="qTypeMulti">Flervalsfrågor</option>
+                <option id="qTypeAlt">Alternativfrågor</option>
+                <option id="qTypeOrder">Rangordningsfrågor</option>
+                <option id="qTypeOpen">Öppna frågor</option>
+                </select>
+                </div>
+
+
+                <div id="answersBox">
+                <div class="input-group answer">
+                <span class="input-group-btn">
+                <button class="btn btn-default removeButton" type="button">
+                <span class="glyphicon glyphicon-remove"></span>
+                </button>
+                </span>
+                <input type="text" class="form-control" placeholder="Svar 1">
+                </div>
+                <div class="input-group answer">
+                <span class="input-group-btn">
+                <button class="btn btn-default removeButton" type="button">
+                <span class="glyphicon glyphicon-remove"></span>
+                </button>
+                </span>
+                <input type="text" class="form-control" placeholder="Svar 2">
+                </div>
+                </div>
+                <p id="infoText"></p>
+                </form>
+                </div>
+                <div class="modal-footer">
+                <button type="button" class="btn btn-default pull-left" id="addButton">Lägg till Svar</button>
+                <button type="button" class="btn btn-default">Spara</button>
+                </div>
+                </div>
+                </div>`);
     });
 
     function resetQuestionBox(){
