--- a/views/partials/_studentNavbar.hbs
+++ b/views/partials/_studentNavbar.hbs
@@ -14,7 +14,7 @@
         <!-- Collapse Menu -->
         <div class="collapse navbar-collapse" id="navbar-collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Gå till test</a></li>
+                <li><a href="/testMenu">Gå till test</a></li>
                 <li><a href="/results">Resultat</a></li>
             </ul>
 
