--- a/views/test.hbs
+++ b/views/test.hbs
@@ -1,5 +1,5 @@
 <div class="col-md-3 pull-right text-center">
-    <h2>10:00</h2>
+    <h2>Tid: {{test.TTimeMin}}</h2>
 </div>
 <div class="container">
     <div class="col-lg-8 col-lg-offset-2">
@@ -12,12 +12,12 @@
             <!-- Radio button -->
             <div class="panel panel-default">
                 <div class="panel-heading">
-                    <h3 class="panel-title">{{Question}}<span class="pull-right">Poäng: </span></h3>
+                    <h3 class="panel-title" id="{{QuestionId}}">{{Question}}<span class="pull-right">Poäng: {{QPoints}}</span></h3>
                 </div>
                 <div class="panel-body">
                     {{#answers}}
                         <div class="radio">
-                            <label><input type="radio" name="optradio" id="A">{{AText}}</label>
+                            <label><input type="radio" name="optradio" id="{{AnswersId}}">{{AText}}</label>
                         </div>
                     {{/answers}}
                 </div>
@@ -28,12 +28,12 @@
                 <!-- Sortera -->
                 <div class="panel panel-default">
                     <div class="panel-heading" data-toggle="collapse" data-target="#panel-body">
-                        <h3 class="panel-title">{{Question}}<span class="pull-right">Poäng: </span></h3>
+                        <h3 class="panel-title" id="{{QuestionId}}">{{Question}}<span class="pull-right">Poäng: {{QPoints}}</span></h3>
                     </div>
                     <div class="panel-body" id="panel-body">
-                        <ul class="list-group" id="sortable">
+                        <ul class="list-group sortable" id="sortable">
                             {{#answers}}
-                                <li class="list-group-item">{{AText}}</li>
+                                <li class="list-group-item" id="{{AnswersId}}">{{AText}}</li>
                             {{/answers}}
                         </ul>
                     </div>
@@ -44,12 +44,12 @@
                 <!-- Checkbox -->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">{{Question}}<span class="pull-right">Poäng: </span></h3>
+                        <h3 class="panel-title" id="{{QuestionId}}">{{Question}}<span class="pull-right">Poäng: {{QPoints}}</span></h3>
                     </div>
                     <div class="panel-body">
                         {{#answers}}
                             <div class="checkbox">
-                                <label><input type="checkbox" value="">{{AText}}</label>
+                                <label><input type="checkbox" value="" id="{{AnswersId}}">{{AText}}</label>
                             </div>
                         {{/answers}}
                     </div>
@@ -60,7 +60,7 @@
                 <!-- Textarea -->
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">{{Question}}<span class="pull-right">Poäng: </span></h3>
+                        <h3 class="panel-title" id="{{QuestionId}}">{{Question}}<span class="pull-right">Poäng: {{QPoints}}</span></h3>
                     </div>
                     <div class="panel-body">
                         <div class="form-group">
@@ -78,7 +78,7 @@
 
 <script>
     $(function(){
-        $("#sortable").sortable();
+        $(".sortable").sortable();
 
 
         $('.container').on('click', '.panel-heading', function(e) {
