--- a/views/create.hbs
+++ b/views/create.hbs
@@ -185,7 +185,8 @@
                 <button type="button" class="btn btn-default">Spara</button>
                 </div>
                 </div>
-                </div>`);
+                </div>`
+        );
     });
 
     function resetQuestionBox(){
@@ -256,7 +257,7 @@
                 $("#answersBox").html('<form>Egen notering:<br>' +
                 '<input type="text" name="firstname" class="form-control"></form>');
             } else {
-                resetQuestionBox()
+
             }
         });
     });
