--- a/views/create.hbs
+++ b/views/create.hbs
@@ -151,10 +151,10 @@
                 <div class="form-group">
                 <select class="form-control" id="typeSelect">
                 <option hidden>Välj Typ</option>
-                <option id="qTypeMulti">Flervalsfrågor</option>
-                <option id="qTypeAlt">Alternativfrågor</option>
-                <option id="qTypeOrder">Rangordningsfrågor</option>
-                <option id="qTypeOpen">Öppna frågor</option>
+                <option id="qTypeMulti">Flervalsfråga</option>
+                <option id="qTypeAlt">Alternativfråga</option>
+                <option id="qTypeOrder">Rangordningsfråga</option>
+                <option id="qTypeOpen">Öppen fråga</option>
                 </select>
                 </div>
 
@@ -211,10 +211,10 @@
                 <div class="form-group">
                 <select class="form-control" id="typeSelect">
                 <option hidden>Välj Typ</option>
-                <option id="qTypeMulti">Flervalsfrågor</option>
-                <option id="qTypeAlt">Alternativfrågor</option>
-                <option id="qTypeOrder">Rangordningsfrågor</option>
-                <option id="qTypeOpen">Öppna frågor</option>
+                <option id="qTypeMulti">Flervalsfråga</option>
+                <option id="qTypeAlt">Alternativfråga</option>
+                <option id="qTypeOrder">Rangordningsfråga</option>
+                <option id="qTypeOpen">Öppen fråga</option>
                 </select>
                 </div>
 
