La in timern i testsidan

--- a/views/create.hbs
+++ b/views/create.hbs
@@ -272,7 +272,8 @@
             method: 'post',
             data: testData,
             success: function(){
-
+                console.log('Created test successfully');
+                location.replace('/');
             }
         });
     });
