--- a/views/test.hbs
+++ b/views/test.hbs
@@ -1,5 +1,5 @@
 <div class="col-md-3 pull-right text-center">
-    <h2>Tid: {{test.TTimeMin}}</h2>
+    <h2 id="timer">Tid: {{test.TTimeMin}}</h2>
 </div>
 <div class="container">
     <div class="col-lg-8 col-lg-offset-2">
@@ -85,4 +85,33 @@
             $(this).next('.panel-body').slideToggle();
         });
     });
+
+    var sec = 0;
+    var min;
+    var myVar;
+    timer({{test.TTimeMin}});
+    //Function timer start function countDown every second.
+    function timer(time) {
+        min = time;
+        countDown(); //Call function countDown too show starttime before count down.
+        myVar = setInterval(countDown, 1000);
+    }
+    //Function countDown display time in HTML
+    function countDown() {
+        var element = document.getElementById('timer');
+        if(sec <10){
+            element.innerHTML =   min + ':' + '0' + sec;}
+        else{
+            element.innerHTML = min + ':' + sec;
+        }
+
+        if (sec < 1 && min < 1) {
+            clearInterval(myVar);
+        }
+        if (sec < 1) {
+            min--;
+            sec = 60;
+        }
+        sec--;
+    }
 </script>
