--- a/views/create.hbs
+++ b/views/create.hbs
@@ -132,6 +132,7 @@
     $(document).on('click', '.btn-edit', function() {
         var title = $(this).parent().parent().find('.panel-title').html();
         var n = title.indexOf("(");
+        var titleQuestion = title.substring(0, n);
         console.log(title.substring(n));
 
         $('#editModal').html(`
@@ -145,7 +146,7 @@
                 <form>
 
                 <div class="form-group" id="question">
-                <input type="text" class="form-control questionTitle" placeholder="Fråga?" value="`+ $("#question").find('input').val() +`">
+                <input type="text" class="form-control questionTitle" placeholder="Fråga?" value="`+ titleQuestion +`">
                 </div>
 
 
