--- a/views/create.hbs
+++ b/views/create.hbs
@@ -132,8 +132,10 @@
     $(document).on('click', '.btn-edit', function() {
         var title = $(this).parent().parent().find('.panel-title').html();
         var n = title.indexOf("(");
-        var titleQuestion = title.substring(0, n);
-        console.log(title.substring(n));
+        var titleQuestion = title.substring(0, n).trim();
+        var titleType = title.substring(n);
+
+        var answers = $(this).parent().parent().parent().find('.panel-body').find('.ul');
 
         $('#editModal').html(`
                 <div class="modal-dialog">
